feat: performance analysis done but has compilation error

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -681,3 +681,109 @@
 	year = {2019},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\5J98J2JX\\Tan and Lim - 2019 - Vanishing Gradient Mitigation with Deep Learning Neural Network Optimization.pdf:application/pdf},
 }
+
+@inproceedings{xin_cosy_2017,
+	address = {Shenzhen},
+	title = {{COSY}: {An} {Energy}-{Efficient} {Hardware} {Architecture} for {Deep} {Convolutional} {Neural} {Networks} {Based} on {Systolic} {Array}},
+	isbn = {978-1-5386-2129-5},
+	shorttitle = {{COSY}},
+	url = {https://ieeexplore.ieee.org/document/8368363/},
+	doi = {10.1109/ICPADS.2017.00034},
+	abstract = {Deep convolutional neural networks (CNNs) show extraordinary abilities in artiﬁcial intelligence applications, but their large scale of computation usually limits their uses on resource-constrained devices. For CNN’s acceleration, exploiting the data reuse of CNNs is an effective way to reduce bandwidth and energy consumption. Row-stationary (RS) dataﬂow of Eyeriss is one of the most energy-efﬁcient state-of-the-art hardware architectures, but has redundant storage usage and data access, so the data reuse has not been fully exploited. It also requires complex control and is intrinsically unable to skip over zero-valued inputs in timing. In this paper, we present COSY (CNN on Systolic Array), an energy-efﬁcient hardware architecture based on the systolic array for CNNs. COSY adopts the method of systolic array to achieve the storage sharing between processing elements (PEs) in RS dataﬂow at the RF level, which reduces lowlevel energy consumption and on-chip storage. Multiple COSY arrays sharing the same storage can execute multiple 2-D convolutions in parallel, further increasing the data reuse in the low-level storage and improving throughput. To compare the energy consumption of COSY and Eyeriss running actual CNN models, we build a process-based energy consumption evaluation system according to the hardware storage hierarchy. The result shows that COSY can achieve an over 15\% reduction in energy consumption under the same constraints, improving the theoretical Energy-Delay Product (EDP) and Energy-Delay Squared Product (ED2P) by 1.33× on average. In addition, we prove that COSY has the intrinsic ability for zero-skipping, which can further increase the improvements to 2.25× and 3.83× respectively.},
+	language = {en},
+	urldate = {2025-10-17},
+	booktitle = {2017 {IEEE} 23rd {International} {Conference} on {Parallel} and {Distributed} {Systems} ({ICPADS})},
+	publisher = {IEEE},
+	author = {Xin, Chen and Chen, Qiang and Tian, Miren and Ji, Mohan and Zou, Chenglong and Wang, Xin'An and Wang, Bo},
+	month = dec,
+	year = {2017},
+	pages = {180--189},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\E4J8BY4Z\\Xin et al. - 2017 - COSY An Energy-Efficient Hardware Architecture for Deep Convolutional Neural Networks Based on Syst.pdf:application/pdf},
+}
+
+@incollection{wermter_minimizing_2014,
+	address = {Cham},
+	title = {Minimizing {Computation} in {Convolutional} {Neural} {Networks}},
+	volume = {8681},
+	isbn = {978-3-319-11178-0 978-3-319-11179-7},
+	url = {http://link.springer.com/10.1007/978-3-319-11179-7_36},
+	abstract = {Convolutional Neural Networks (CNNs) have been successfully used for many computer vision applications. It would be beneﬁcial to these applications if the computational workload of CNNs could be reduced. In this work we analyze the linear algebraic properties of CNNs and propose an algorithmic modiﬁcation to reduce their computational workload. An up to a 47\% reduction can be achieved without any change in the image recognition results or the addition of any hardware accelerators.},
+	language = {en},
+	urldate = {2025-10-17},
+	booktitle = {Artificial {Neural} {Networks} and {Machine} {Learning} – {ICANN} 2014},
+	publisher = {Springer International Publishing},
+	author = {Cong, Jason and Xiao, Bingjun},
+	editor = {Wermter, Stefan and Weber, Cornelius and Duch, Włodzisław and Honkela, Timo and Koprinkova-Hristova, Petia and Magg, Sven and Palm, Günther and Villa, Alessandro E. P.},
+	year = {2014},
+	doi = {10.1007/978-3-319-11179-7_36},
+	note = {Series Title: Lecture Notes in Computer Science},
+	pages = {281--290},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\RFQN435M\\Cong and Xiao - 2014 - Minimizing Computation in Convolutional Neural Networks.pdf:application/pdf},
+}
+
+@article{tan_vanishing_2019-1,
+	title = {Vanishing {Gradient} {Mitigation} with {Deep} {Learning} {Neural} {Network} {Optimization}},
+	abstract = {Deep structured learning has emerged as a new area of machine learning research with its wide range of applications in signal and information processing. There are two general aspects often discussed in various high level descriptions of deep learning: i.e. (a) its structural models consisting of multiple layers or stages intended for non-linear information processing, (b) optimization techniques speciﬁcally for supervised or unsupervised learning of feature representation at sequentially higher abstract layers. However, non-linear higher level abstraction are prone to vanishing gradient problem with saturated activation functions. In this paper, the experiment is setup to examine the plausibility of applying Approximate Greatest Descent in deep neural networks. The experiments tested both saturated and unsaturated activation function with up to ﬁve hidden layers. As a result, stochastic diagonal approximate greatest descent (SDAGD) demonstrated no sign of vanishing gradient when training with both saturated and unsaturated activation functions. When hidden layers are added, SDAGD could obtain reasonable results as compared to Stochastic Gradient Descent (SGD).},
+	language = {en},
+	author = {Tan, Hong Hui and Lim, King Hann},
+	year = {2019},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\NIRDQRFY\\Tan and Lim - 2019 - Vanishing Gradient Mitigation with Deep Learning Neural Network Optimization.pdf:application/pdf},
+}
+
+@inproceedings{tiwari_design_2022,
+	address = {Kosice, Slovakia},
+	title = {Design of a {Low} {Power} and {Area} {Efficient} {Bfloat16} based {Generalized} {Systolic} {Array} for {DNN} {Applications}},
+	copyright = {https://doi.org/10.15223/policy-029},
+	isbn = {978-1-7281-8686-3},
+	url = {https://ieeexplore.ieee.org/document/9764899/},
+	doi = {10.1109/RADIOELEKTRONIKA54537.2022.9764899},
+	abstract = {Nowadays demand for artiﬁcial intelligence (AI) enabled mobile platforms is increasing. From healthcare services to defense and from remote to urban area, there is a huge demand of secured and power efﬁcient devices. The performance of these platforms can be enhanced by providing an efﬁcient compute engine. These compute engines perform a huge amount of matrix operations. The most popular choice for large matrix computation is a systolic array. In general, the systolic array performance degrades for the large input matrices, due to the trade off between resource utilization and computation delay. To address this issue, we need a systolic array with a control unit to re-conﬁgure the array according to the requirement of the computation. Computation array can be further improved by handling the negative weights and reduce the MAC operations. In this paper, we proposed a generalized bﬂoat16 based systolic array in which the sign of the partial sum (PS) is predicted before computation. The PS sign aids in network pruning which enhances system performance. The proposed system is implemented on a Virtex-7 FPGA board and it performs 2.21× and 4.19× better in terms of area and power compared to singleprecision based systolic array.},
+	language = {en},
+	urldate = {2025-10-17},
+	booktitle = {2022 32nd {International} {Conference} {Radioelektronika} ({RADIOELEKTRONIKA})},
+	publisher = {IEEE},
+	author = {Tiwari, Ankita and Mishra, Saras Mani and Guha, Prithwijit and Jan, Pidanic and Nemec, Zdenek and Trivedi, Gaurav},
+	month = apr,
+	year = {2022},
+	pages = {1--5},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\JA95RD7B\\Tiwari et al. - 2022 - Design of a Low Power and Area Efficient Bfloat16 based Generalized Systolic Array for DNN Applicati.pdf:application/pdf},
+}
+
+@inproceedings{chatterjee_exploring_2024,
+	address = {Raleigh, NC, USA},
+	title = {Exploring {Compositional} {Neural} {Networks} for {Real}-{Time} {Systems}},
+	copyright = {https://doi.org/10.15223/policy-029},
+	isbn = {979-8-3503-7802-3},
+	url = {https://ieeexplore.ieee.org/document/10740740/},
+	doi = {10.1109/MEMOCODE63347.2024.00010},
+	abstract = {Real-time CPSs using Artificial Neural Networks (ANNs) are traditionally developed as monolithic black-boxes. This results in designs that are often difficult to formally verify against safety specifications and implement on hardware for formal timing analysis. Consequently, their implementation as a composition of smaller ANNs has received recent interest. These are easier to implement, parallelise and validate. Despite this, the question of how to produce hardware-implementable compositional designs from existing monolithic ones remains largely unanswered.},
+	language = {en},
+	urldate = {2025-10-17},
+	booktitle = {2024 22nd {ACM}-{IEEE} {International} {Symposium} on {Formal} {Methods} and {Models} for {System} {Design} ({MEMOCODE})},
+	publisher = {IEEE},
+	author = {Chatterjee, Sobhan and Allen, Nathan and Patel, Nitish and Roop, Partha},
+	month = oct,
+	year = {2024},
+	pages = {46--57},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\NX5FANQD\\Chatterjee et al. - 2024 - Exploring Compositional Neural Networks for Real-Time Systems.pdf:application/pdf},
+}
+
+@article{tiwari_data_2022,
+	title = {Data {Streaming} and {Traffic} {Gathering} in {Mesh}-based {NoC} for {Deep} {Neural} {Network} {Acceleration}},
+	volume = {126},
+	issn = {13837621},
+	url = {http://arxiv.org/abs/2108.02569},
+	doi = {10.1016/j.sysarc.2022.102466},
+	abstract = {The increasing popularity of deep neural network (DNN) applications demands high computing power and efﬁcient hardware accelerator architecture. DNN accelerators use a large number of processing elements (PEs) and on-chip memory for storing weights and other parameters. As the communication backbone of a DNN accelerator, networks-on-chip (NoC) play an important role in supporting various dataﬂow patterns and enabling processing with communication parallelism in a DNN accelerator. However, the widely used mesh-based NoC architectures inherently cannot support the efﬁcient one-to-many and many-to-one trafﬁc largely existing in DNN workloads. In this paper, we propose a modiﬁed mesh architecture with a one-way/two-way streaming bus to speedup one-tomany (multicast) trafﬁc, and the use of gather packets to support many-to-one (gather) trafﬁc. The analysis of the runtime latency of a convolutional layer shows that the two-way streaming architecture achieves better improvement than the one-way streaming architecture for an Output Stationary (OS) dataﬂow architecture. The simulation results demonstrate that the gather packets can help to reduce the runtime latency up to 1.8 times and network power consumption up to 1.7 times, compared with the repetitive unicast method on modiﬁed mesh architectures supporting two-way streaming.},
+	language = {en},
+	urldate = {2025-10-18},
+	journal = {Journal of Systems Architecture},
+	author = {Tiwari, Binayak and Yang, Mei and Wang, Xiaohang and Jiang, Yingtao},
+	month = may,
+	year = {2022},
+	note = {arXiv:2108.02569 [cs]},
+	keywords = {Computer Science - Distributed, Parallel, and Cluster Computing, Computer Science - Hardware Architecture, Computer Science - Machine Learning},
+	pages = {102466},
+	annote = {Comment: Submitted for the journal review},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\6QBWE5MN\\Tiwari et al. - 2022 - Data Streaming and Traffic Gathering in Mesh-based NoC for Deep Neural Network Acceleration.pdf:application/pdf},
+}
